MultiEngine decorator. Total renaming. Migrations. Due to Yandex Api requests & IP limitation provided alternative html versions of search engines.

--- a/MultiSearch.Web/Views/History/Index.cshtml
+++ b/MultiSearch.Web/Views/History/Index.cshtml
@@ -31,8 +31,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
-                <td class="break-all">
+                <td  class="break-all" >
+                    <a href="@item.Link">
                     @Html.DisplayFor(modelItem => item.Link)
+                    </a>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Snippet)
